<resources>
    <string name="app_name">Dealer Manager</string>

    <!--Titles-->
    <string name="title_activity_login">Sign in</string>

    <!--Actions-->
    <string name="action_settings">Table Settings</string>
    <string name="action_sign_in">Login or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_reset">Reset</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_id_number">ID Number</string>
    <string name="prompt_password">Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_calling">Calling...</string>
    <string name="label_bar">Bar</string>
    <string name="label_fsr">FSR</string>
    <string name="label_security">Security</string>
    <string name="label_chips">Chips</string>
    <string name="label_player_wins">Player Wins</string>
    <string name="label_banker_wins">Banker Wins</string>
    <string name="label_tie">Tie</string>
    <string name="label_natural8">Natural 8</string>
    <string name="label_natural9">Natural 9</string>
    <string name="label_tiger8">Tiger 8</string>
    <string name="label_pheonix7">Pheonix 7</string>
    <string name="label_new_shoe">New Shoe</string>
    <string name="label_undo">Undo</string>
    <string name="label_log_in">Log In</string>
    <string name="label_logout">Log Out?</string>
    <string name="action_confirm">Confirm</string>
</resources>
