<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.rivetry.dealermanager.activities.LoginActivity"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/loginBackground">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/text"
            android:text="@string/label_log_in"
            android:id="@+id/textView"
            style="@style/ViewHeader"
            android:layout_marginBottom="@dimen/linearLayoutDividerMargin"/>

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="@dimen/editTextMaxWidth"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:hintTextAppearance="@style/HintText">-->

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="10dp"
                    style="@style/LightEditTextstyle"
                    android:layout_marginBottom="@dimen/linearLayoutDividerMargin" />

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:hintTextAppearance="@style/HintText">-->

                <EditText
                    android:id="@+id/idNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_id_number"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="10dp"
                    style="@style/LightEditTextstyle"
                    android:layout_marginBottom="@dimen/linearLayoutDividerMargin"/>

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:hintTextAppearance="@style/HintText">-->

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="10dp"
                    style="@style/LightEditTextstyle"
                    android:layout_marginBottom="@dimen/linearLayoutDividerMargin" />

            <!--</android.support.design.widget.TextInputLayout>-->

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/action_sign_in_short"
                android:id="@+id/btnSignIn"
                android:background="@drawable/ripple_grey"
                android:textColor="@color/white"
                android:layout_columnWeight="4"
                android:layout_rowWeight="4"
                android:layout_weight="1"
                android:layout_marginTop="20dp" />

        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
